--- a/style.css
+++ b/style.css
@@ -1,5 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Noto+Sans:wght@700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700;800;900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Grand+Hotel&family=Montserrat:wght@700&family=Noto+Sans:wght@700&display=swap');
 *{
     margin: 0;
@@ -11,23 +10,137 @@
     height: 7057px;
     color:white;
     margin: auto;
+    font-family: 'Montserrat', sans-serif;
+    letter-spacing: 1.2px;
+    float: left;
 }
 ul{
     list-style:none;
 }
-header p{
-    font-family: 'Montserrat', sans-serif;
+nav p{
     font-size: 25px;
+    font-weight: bold;
 }
-header li{
+nav li{
     float: left;
-    margin: 61px 0 0 63px;
+    margin: 53.5px 0 0 50px;
 }
 .icon{
     float: right;
     margin:43px 60px 0 0;
 }
-p{
+header{
+    display: block;
+    height: 86px;
+}
+main .text{
+    margin-top: 66px;
+    margin-left: 49.5px;
+    height: fit-content;
+}
+.onetext{
     font-family: 'Grand Hotel', cursive;
-    font-size: 50px;
+    font-size: 153.15px;
+    margin-bottom: 26px;
+    letter-spacing: 6px;
+}
+.twotext{
+    font-size: 32px;
+    font-weight: bold;
+    margin-bottom: 14.5px;
+    margin-left: 7px;
+    letter-spacing: 2.9px;
+} 
+.threetext{
+    font-size: 14.6px;
+    line-height: 165%;
+    width: 496px;
+    letter-spacing: 0.9px;
+    margin-bottom: 22px;
+    margin-left: 9px;
+}
+
+button{
+    font-family: 'Montserrat', sans-serif;
+    color: white;
+    font-size: 33px;
+    font-weight:bold;
+    height: 58px;
+    width: 248px;
+    border-radius: 16px;
+    border-style: none;
+    letter-spacing: 0.5px;
+    word-spacing: -1.5px;
+
+}
+.text button{
+    margin-bottom: 38px;
+    margin-left: 6px;
+    background-color:rgb(41, 161, 156);
+}
+    
+.underlined {
+    position: relative;
+    display: inline-block;
+    text-decoration: none; 
+    margin-left: 51px;
+  }
+  
+  .underlined::after {
+    content: "";
+    position: absolute;
+    bottom: -1px; 
+    left: 5px;
+    right: 6px;
+    height: 3px; 
+    background-color:rgb(41, 161, 156);
+  }
+.text img{
+    position: absolute;
+    right:31px;
+    top:142px;
+}
+  
+.wave{
+    position: relative;
+}
+.second_section{
+    height: 828px;
+    background-color:rgb(41, 161, 156);
+    margin-top: -4px;
+    display: flex;
+}
+.second_section .onetext{
+    font-size: 125px;
+    margin: 145px 0 0 135px;
+    letter-spacing: 5px;
+    line-height: 113px;
+    display: block;
+    box-sizing: border-box;
+    height: fit-content;
+}
+.second_section img{
+    align-self: center;
+    margin: 35px 0 0 273px;
+}
+.second_section button{
+    margin: 95px 0 0 135px;
+    background-color:#222831;
+    width: 247px;
+    border-radius: 14px;
+}
+.second_section .paragraphs{
+margin: 32px 0 0 194px;
+font-size: 23.67px;
+letter-spacing: 1.45px;
+line-height: 39.2px;
+}
+.one_tab{
+    margin-left: 2px;
+}
+.two_tab{
+    margin-left: 59px;
+}
+.three_tab{
+    margin-left: 83px;
 }
