--- a/style.css
+++ b/style.css
@@ -5,14 +5,14 @@
     padding: 0;
 }
 .container{
-    background-color:#222831;
+    background-image: url(back_and_icons.png);
     width: 1440px;
     height: 7057px;
     color:white;
     margin: auto;
     font-family: 'Montserrat', sans-serif;
-    letter-spacing: 1.2px;
     float: left;
+     /* letter-spacing: 1.2px;  */
 }
 ul{
     list-style:none;
@@ -20,73 +20,69 @@ ul{
 nav p{
     font-size: 25px;
     font-weight: bold;
+    letter-spacing: 1.15px;
 }
 nav li{
     float: left;
-    margin: 53.5px 0 0 50px;
+    margin: 53.5px 0 0 49px;
 }
 .icon{
     float: right;
     margin:43px 60px 0 0;
 }
 header{
-    display: block;
     height: 86px;
 }
-main .text{
-    margin-top: 66px;
-    margin-left: 49.5px;
-    height: fit-content;
+.special_picture{
+    position: absolute;
+    right:31px;
+    top:142px;
 }
-.onetext{
+.first_section .text{
+    margin: 66px 0 0 49.5px;
+}
+.first_text{
     font-family: 'Grand Hotel', cursive;
     font-size: 153.15px;
     margin-bottom: 26px;
     letter-spacing: 6px;
 }
-.twotext{
+.first_section .second_text{
     font-size: 32px;
     font-weight: bold;
-    margin-bottom: 14.5px;
-    margin-left: 7px;
+    margin: 0 0 14.5px 7px;
     letter-spacing: 2.9px;
 } 
-.threetext{
+.first_section .third_text{
     font-size: 14.6px;
     line-height: 165%;
     width: 496px;
     letter-spacing: 0.9px;
-    margin-bottom: 22px;
-    margin-left: 9px;
+    margin: 0 0 22px 9px;
 }
-
 button{
-    font-family: 'Montserrat', sans-serif;
-    color: white;
-    font-size: 33px;
+    font-size: 33.33px;
     font-weight:bold;
     height: 58px;
-    width: 248px;
-    border-radius: 16px;
+    width: 247px;
+    border-radius: 15px;
     border-style: none;
-    letter-spacing: 0.5px;
+    letter-spacing: 2.1px; 
     word-spacing: -1.5px;
-
+    color: white;
+    cursor: pointer;
 }
 .text button{
-    margin-bottom: 38px;
-    margin-left: 6px;
+    margin: 0 0 38px 6px;
     background-color:rgb(41, 161, 156);
-}
-    
+}   
 .underlined {
     position: relative;
     display: inline-block;
     text-decoration: none; 
     margin-left: 51px;
-  }
-  
-  .underlined::after {
+}
+.underlined::after {
     content: "";
     position: absolute;
     bottom: -1px; 
@@ -94,46 +90,44 @@ button{
     right: 6px;
     height: 3px; 
     background-color:rgb(41, 161, 156);
-  }
-.text img{
-    position: absolute;
-    right:31px;
-    top:142px;
 }
-  
 .wave{
     position: relative;
 }
+.zerno{
+    position:absolute;
+    left: 216px;
+    top: 771.7px;
+}
 .second_section{
     height: 828px;
-    background-color:rgb(41, 161, 156);
     margin-top: -4px;
     display: flex;
 }
-.second_section .onetext{
+.second_section .first_piece{
+    margin: 100px 0 0 100px;
+}
+.second_section .first_text{
     font-size: 125px;
-    margin: 145px 0 0 135px;
+    margin: 46px 0 0 35px;
     letter-spacing: 5px;
-    line-height: 113px;
-    display: block;
-    box-sizing: border-box;
-    height: fit-content;
+    line-height: 112.5px;
+}
+.blank_space{
+    width: 190px;
 }
 .second_section img{
-    align-self: center;
-    margin: 35px 0 0 273px;
+    margin: 35px 0 0 83.5px;
 }
 .second_section button{
-    margin: 95px 0 0 135px;
+    margin: 95px 0 0 35px;
     background-color:#222831;
-    width: 247px;
-    border-radius: 14px;
 }
 .second_section .paragraphs{
-margin: 32px 0 0 194px;
-font-size: 23.67px;
-letter-spacing: 1.45px;
-line-height: 39.2px;
+    margin: 32px 0 0 4px;
+    font-size: 23.67px;
+    letter-spacing: 1.45px;
+    line-height: 39.2px;
 }
 .one_tab{
     margin-left: 2px;
