--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
     padding: 0;
 }
 .container{
-    background-image: url(back_and_icons.png);
+    background-image: url(/imgfolder/back_and_icons.png);
     width: 1440px;
     height: 7057px;
     color:white;
