--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
     padding: 0;
 }
 .container{
-    background-image: url(back_and_icons.png);
+    background-image: url(/imgfolder/back_and_icons.png);
     width: 1440px;
     height: 7057px;
     color:white;
@@ -137,4 +137,72 @@ button{
 }
 .three_tab{
     margin-left: 83px;
+}
+.upperwave{
+    position: relative;
+    top: -110px;
+}
+.twocups_section{
+    height: 828px;
+    margin-top: -40px;
+    margin-left: 100px; 
+    display: flex;
+}
+.blank_space_hot{
+    width: 201px;
+}
+.hot_text{
+    font-family: 'Grand Hotel', cursive;
+    font-size: 125px;
+    margin: 49px 6.5px 50px 0;
+    letter-spacing: 5px;
+    line-height: 112.5px;
+    text-align: right;
+}
+.circlecup1{
+    margin-left: 35px;
+    margin-top: -3px;
+}
+.paragraphs_hot {
+    margin: 31.8px 0 0 33px;
+    font-size: 23.4px;
+    letter-spacing: 1.1px;
+    line-height: 41px;
+    word-spacing: 70%;
+}
+.twocups_section button{
+    margin: 51px 0 0 85px;
+    background-color:rgb(41, 161, 156);
+}
+.white_section{
+    display: flex;
+    position: relative;
+    top: -90px;
+    left: 130px;
+}
+.white_text{    
+    font-family: 'Grand Hotel', cursive;
+    font-size: 124px;
+    margin: 49px 0 70px 3.5px;
+    letter-spacing: 5px;
+    line-height: 112.5px;
+}
+.blank_space_white{
+    width: 280px;
+}
+.paragraphs_white {
+    margin: 34px 13px 0 -26px;
+    font-size: 21px;
+    letter-spacing: 1.7px;
+    line-height: 39px;
+    word-spacing: 65%;
+    text-align: right;
+}
+.circlecup2{
+    margin-left: 28px;
+    margin-top: 33px;
+}
+.white_section button{
+    margin: 29px 0 0 5px;
+    background-color:rgb(41, 161, 156);
 }
