--- a/style.css
+++ b/style.css
@@ -422,7 +422,7 @@ div.dat2 {
     letter-spacing: 2.45px;
     margin-right: 80px;
 }
-.branches_names p{
+.branches_names h4{
     width: 280px;
     font-weight: bold;
     text-align: center; 
