--- a/style.css
+++ b/style.css
@@ -14,7 +14,9 @@
     float: left;
      
 }
-
+h1,h2,h3,h4,h5,h6{
+    font-weight: 400;
+}
 main{
     height: 6421px;
 }
@@ -122,10 +124,12 @@ button:hover{
     margin: 100px 0 0 100px;
 }
 .second_section .first_text{
-    font-size: 125px;
     margin: 46px 0 0 35px;
     letter-spacing: 5px;
     line-height: 112.5px;
+}
+.first_text h2{
+    font-size: 125px;
 }
 .second_section img{
     margin: 35px 0 0 83.5px;
@@ -135,6 +139,7 @@ button:hover{
     background-color:#222831;
 }
 .second_section .paragraphs{
+    width: 680px;
     margin: 32px 0 0 4px;
     font-size: 23.67px;
     letter-spacing: 1.45px;
@@ -565,4 +570,3 @@ div.dat2 {
     margin-right: 30px;
     font-size: 23px; 
 }
-
