--- a/style.css
+++ b/style.css
@@ -14,7 +14,9 @@
     float: left;
      
 }
-
+h1,h2,h3,h4,h5,h6{
+    font-weight: 400;
+}
 main{
     height: 6421px;
 }
@@ -122,10 +124,12 @@ button:hover{
     margin: 100px 0 0 100px;
 }
 .second_section .first_text{
-    font-size: 125px;
     margin: 46px 0 0 35px;
     letter-spacing: 5px;
     line-height: 112.5px;
+}
+.first_text h2{
+    font-size: 125px;
 }
 .second_section img{
     margin: 35px 0 0 83.5px;
@@ -135,6 +139,7 @@ button:hover{
     background-color:#222831;
 }
 .second_section .paragraphs{
+    width: 680px;
     margin: 32px 0 0 4px;
     font-size: 23.67px;
     letter-spacing: 1.45px;
@@ -223,7 +228,7 @@ button:hover{
     top: -210px;
     float: left;
 } 
-.vouch {
+p.vouch {
     font-family: "grand hotel";
     font-size: 130.93px;
     color : white;
@@ -239,8 +244,6 @@ img.vouchImg {
     padding-right : 24px;
     
 }
-
-
 
 
 .butVB {
@@ -260,7 +263,7 @@ img.vouchImg {
     box-shadow: 0 0 0 2px #fff;
 } 
 
-h3.main {
+p.main {
     font-family: "grand hotel";
     font-size: 87.5px;
     color : white;
@@ -332,7 +335,7 @@ div.forback {
     padding-bottom: 42px;
 }
 
-.titwao {
+p.titwao {
     font-family: "grand hotel";
     margin-top: 36px;
     font-size: 97.78px;
@@ -567,4 +570,3 @@ div.dat2 {
     margin-right: 30px;
     font-size: 23px; 
 }
-
