--- a/style.css
+++ b/style.css
@@ -223,12 +223,12 @@ button:hover{
     top: -210px;
     float: left;
 } 
-p.vouch {
+h2.vouch {
     font-family: "grand hotel";
     font-size: 130.93px;
     color : white;
     text-align: center;
-    margin-top: 24px;
+    margin-top: 25px;
     margin-right: 50px;
 }
 
@@ -258,7 +258,7 @@ img.vouchImg {
     box-shadow: 0 0 0 2px #fff;
 } 
 
-p.main {
+h3.main {
     font-family: "grand hotel";
     font-size: 87.5px;
     color : white;
@@ -330,7 +330,7 @@ div.forback {
     padding-bottom: 42px;
 }
 
-p.titwao {
+h2.titwao {
     font-family: "grand hotel";
     margin-top: 36px;
     font-size: 97.78px;
